@@ -162,6 +162,7 @@ dist_pkgdata_DATA = \
   LHCB_2010_S8758301.info \
   LHCB_2011_I917009.info \
   LHCB_2011_I919315.info \
+  LHCF_2012_I1115479.info \
   MC_DIJET.info \
   MC_DIPHOTON.info \
   MC_GENERIC.info \
