@@ -1,0 +1,28 @@
+# BEGIN PLOT /LHCF_2012_I1115479/d0
+XLabel=$p_\perp$ [GeV]
+YLabel=$1/\sigma_\text{inel}$ $E \mathrm{d}^3\sigma/\mathrm{d}p^3$ [GeV$^{-2}$]
+# END PLOT
+
+# BEGIN PLOT /LHCF_2012_I1115479/d01-x01-y01 
+Title=$\pi^0$ $p_\perp$ spectrum, $8.9 < y < 9.0$
+# END PLOT
+
+# BEGIN PLOT /LHCF_2012_I1115479/d02-x01-y01 
+Title=$\pi^0$ $p_\perp$ spectrum, $9.0 < y < 9.2$
+# END PLOT
+
+# BEGIN PLOT /LHCF_2012_I1115479/d03-x01-y01 
+Title=$\pi^0$ $p_\perp$ spectrum, $9.2 < y < 9.4$
+# END PLOT
+
+# BEGIN PLOT /LHCF_2012_I1115479/d04-x01-y01 
+Title=$\pi^0$ $p_\perp$ spectrum, $9.4 < y < 9.6$
+# END PLOT
+
+# BEGIN PLOT /LHCF_2012_I1115479/d05-x01-y01 
+Title=$\pi^0$ $p_\perp$ spectrum, $9.6 < y < 10.0$
+# END PLOT
+
+# BEGIN PLOT /LHCF_2012_I1115479/d06-x01-y01 
+Title=$\pi^0$ $p_\perp$ spectrum, $10.0 < y < 11.0$
+# END PLOT
