@@ -2,6 +2,7 @@ dist_pkgdata_DATA = \
   LHCB_2010_S8758301.aida \
   LHCB_2011_I917009.aida \
   LHCB_2011_I919315.aida \
+  LHCF_2012_I1115479.aida \
   JADE_OPAL_2000_S4300807.aida \
   JADE_1998_S3612880.aida \
   TASSO_1990_S2148048.aida \
