@@ -17,13 +17,17 @@
 
 	* Removing the long-unused/defunct autopackage system.
 
+2012-11-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* Added LHCF_2012_I1115479 analysis
+
 2012-11-14  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Converting the argument order of logspace, clarifying the
 	arguments, updating affected code, and removing Analysis::logBinEdges.
 
 	* Merging updates from the AIDA maintenance branch up to r4002
-	 (latest revision for next merges is r4009).
+	(latest revision for next merges is r4009).
 
 2012-11-11  Andy Buckley  <andy.buckley@cern.ch>
 
